<resources>
    <string name="app_name">IF Connect</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name_project">CONNECT</string>
    <string name="bem_vindo">Bem-Vindo ao Page!</string>
    <string name="recentes">Recentes:</string>
    <string name="proxencontro">Próximos Encontros:</string>
    <string name="todosgrupos">Todos os grupos e turmas que participa:</string>
    <string name="areaaluno">Área do Aluno</string>
    <string name="areaprofessor">Área do Professor</string>
    <string name="suasturmas">Suas turmas:</string>
    <string name="seusgrupos">Seus Grupos:</string>
    <string name="criarnovaturma">+ Criar Turma</string>
    <string name="criarnovogrupo">+ Criar Grupo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="criar_grupo">Criar Grupo</string>
    <string name="rea_de_estudo">Área de Estudo*:</string>
    <string name="nome_do_grupo">Nome do Grupo*:</string>
    <string name="alunos">Alunos*:</string>
    <string name="convidar_alunos">Convidar alunos</string>
    <string name="descri_o">Descrição:</string>
    <string name="concluir">Concluir</string>
    <string name="ok">Ok</string>
    <string name="curso">Curso:</string>
    <string name="area">Área:</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="administrador">Administrador:</string>
    <string name="descricao">Descrição:</string>
    <string name="pr_ximos_encontros">Próximos encontros:</string>
    <string name="novo_encontro">+Novo Encontro</string>
    <string name="digite_uma_descri_o">Digite uma descrição...</string>
    <string name="data">Data*:</string>
    <string name="local">Local:</string>
    <string name="criar_encontro">Criar Encontro</string>
    <string name="tema_do_encontro">Tema do Encontro*:</string>
    <string name="in_cio">Início</string>
    <string name="fim">Fim</string>
    <string name="selecionar_local_dispon_vel">Selecionar Local Disponível</string>
    <string name="dataset">Data:</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="n_o_tenho_uma_conta">Não tenho uma conta</string>
    <string name="senha">Senha*:</string>
    <string name="novasenha">Nova senha*:</string>
    <string name="email">Email*:</string>
    <string name="login_aluno">Login Aluno</string>
    <string name="login_professor">Login Professor</string>
    <string name="cadastro_aluno">Cadastro Aluno</string>
    <string name="cadastro_professor">Cadastro Professor</string>
    <string name="nome">Nome*:</string>
    <string name="matr_cula">Matrícula*:</string>
    <string name="siape">SIAPE*:</string>
    <string name="curso_">Curso*:</string>
    <string name="data_de_nascimento">Data de Nascimento*:</string>
    <string name="digite_a_senha_novamente">Digite a senha novamente*:</string>
    <string name="digite_uma_mensagem">Digite uma mensagem...</string>
    <string name="configura_es">Configurações</string>
    <string name="app_label">label</string>
    <string name="search_hint">Pesquisar um curso...</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="mail_code_message">Enviamos um código de 5 dígitos para o email:</string>
    <string name="mailcode_warn">*O código irá expirar em 15 minutos.</string>
    <string name="mail_example">example@ifce.edu.br</string>
    <string name="reenviar_codigo">Reenviar código</string>
    <string name="insira_o_email_cadastrado">Insira o email cadastrado*</string>
    <string name="encontro_delete_message">Ao fazer isso seu encontro será excluido permanentemente!</string>
    <string name="criar_turma">Criar Turma</string>
    <string name="nome_da_turma">Nome da Turma*:</string>
    <string name="disciplina">Disciplina*:</string>
    <string name="disciplina2">Disciplina:</string>
    <string name="area_do_professor">Área do Professor</string>
    <string name="suas_turmas">Suas Turmas:</string>
    <string name="turno">Turno:</string>
    <string-array name="cursos">
        <item>Indefinido</item>
        <item>Ciência da Computação</item>
        <item>Engenharia Mecânica</item>
        <item>Química</item>
    </string-array>

</resources>