<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        style="@style/textonormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/alterar_senha"
        android:textSize="24sp" />

    <TextView
        style="@style/textonormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:text="@string/insira_o_email_cadastrado"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="#01000000"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:maxLength="50" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_concluir"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:text="@string/concluir"
        android:textAppearance="@style/textonormal"
        android:background="@drawable/littleborder"
        android:foreground="?selectableItemBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center|top">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="invisible"
            android:layout_marginTop="25dp"
            android:layout_width="80dp"
            android:layout_height="80dp" />
    </LinearLayout>
</LinearLayout>