<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentcadastroaluno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/barra" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView7"
                style="@style/textonormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_aluno"
                android:textSize="24sp" />
            <TextView
                style="@style/textonormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:text="@string/email"
                android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="#01000000"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:maxLength="50" />
    </LinearLayout>

            <TextView

                style="@style/textonormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:text="@string/senha"
                android:textSize="24sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:gravity="top"
                android:background="@drawable/border">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false"
                    app:passwordToggleTint="@color/black">
                <EditText
                    android:id="@+id/senha"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#01000000"
                    android:ems="10"
                    android:layout_margin="2dp"
                    android:inputType="textPassword"
                    android:maxLength="20" />
                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <TextView
                    style="@style/textonormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textColor="@color/black_fraco"
                    android:text="@string/n_o_tenho_uma_conta"
                    android:textSize="18sp" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/esqueciasenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <TextView
                    style="@style/textonormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textColor="@color/black_fraco"
                    android:text="@string/esqueci_minha_senha"
                    android:textSize="18sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_concluir"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/littleborder"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    style="@style/textonormal"
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/concluir"
                    android:textSize="16sp" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>