<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/barra" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/textonormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/criar_grupo"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/textonormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:gravity="start"
                    android:text="@string/nome_do_grupo"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nomegrupo"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_margin="2dp"
                        android:background="#01000000"
                        android:ems="10"
                        android:inputType="text"
                        android:maxLength="50" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    style="@style/textonormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/rea_de_estudo"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/areadeestudo"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_margin="2dp"
                        android:background="#01000000"
                        android:ems="10"
                        android:inputType="text"
                        android:maxLength="50" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView12"
                    style="@style/textonormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="start"
                    android:text="@string/curso"
                    android:textSize="24sp" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="180dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spiner">
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </FrameLayout>

                <TextView
                    android:id="@+id/textView10"
                    style="@style/textonormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:text="@string/alunos"
                    android:textSize="24sp" />

                <FrameLayout
                    android:id="@+id/btn_convidaalunos"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/bordermaxdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/nconvidados"
                        style="@style/textonormal"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="0/50"
                        android:textSize="20sp" />

                    <TextView
                        style="@style/textonormal"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/convidar_alunos"
                        android:textSize="16sp" />

                    <ImageView
                        style="@style/textonormal"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:src="@drawable/ic_unfold"
                        android:textSize="20sp" />
                </FrameLayout>

                <TextView
                    android:id="@+id/textView11"
                    style="@style/textonormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/descri_o"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical">
                        <EditText
                            android:id="@+id/descricao"
                            android:hint="@string/digite_uma_descri_o"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start|top"
                            android:maxLength="500"
                            android:lines="6"
                            android:layout_margin="2dp"
                            android:background="#01000000"
                            android:ems="10"
                            android:inputType="textMultiLine" />
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/btn_concluir"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/littleborder"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        style="@style/textonormal"
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/concluir"
                        android:textSize="16sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</LinearLayout>