<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:gravity="center"
    app:cardBackgroundColor="@color/white">

    <FrameLayout
        android:id="@+id/consulta"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginHorizontal="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/nomeDoEncontro"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black_fraco"
            android:fontFamily="@font/imprima"
            android:gravity="start|top"
            android:text="@string/app_name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/datatxt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="start|bottom"
            android:gravity="start|bottom"
            android:text="@string/dataset"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/localtxt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="start|bottom"
            android:gravity="start|bottom"
            android:text="@string/local"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="85dp"
            android:textColor="@color/black_fraco"
            android:fontFamily="@font/imprima"
            android:layout_gravity="start|bottom"
            android:gravity="start|bottom"
            android:text="@string/app_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="85dp"
            android:textColor="@color/black_fraco"
            android:fontFamily="@font/imprima"
            android:layout_gravity="start|bottom"
            android:gravity="start|bottom"
            android:text="@string/app_name"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/edit"
            android:visibility="gone"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/ic_edit"
            tools:ignore="VectorDrawableCompat"
            android:clickable="true"
            android:focusable="true"/>
        <ImageButton
            android:id="@+id/delete"
            android:visibility="gone"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:layout_gravity="end|top"
            android:background="@drawable/ic_delete"
            tools:ignore="VectorDrawableCompat"
            android:clickable="true"
            android:focusable="true"/>
    </FrameLayout>
</FrameLayout>